# ai-banking-assistant

./: .gitignore  README.md
ai-agent/: Ballerina.toml  Dependencies.toml  README.md  agent.bal  config.bal  service.bal  types.bal
bank-mcp-server/: .dockerignore  Dockerfile  client.py  config.py  main.py  pyproject.toml  requirements.txt  server.py  utils.py
bank-mcp-server/.choreo/: component.yaml
banking-mcp-server/: Dockerfile  pyproject.toml  requirements.txt
banking-mcp-server/.choreo/: component.yaml
banking-mcp-server/src/banking_mcp_server/: __main__.py  client.py  config.py  endpoints.py  server.py  utils.py
banking-mcp-server/src/banking_mcp_server/tools/: __init__.py  account_tools.py  bank_tools.py  payment_tools.py  user_tools.py
chat-app/: .dockerignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
chat-app/.choreo/: component.yaml
chat-app/app/: globals.css  layout.tsx  page.tsx  utils.tsx
chat-app/app/api/chat/: route.ts
chat-app/app/auth/callback/: page.tsx
chat-app/components/: markdown-renderer.tsx
chat-app/lib/: auth.ts  client-cache.ts  client-store.ts
chat-app/lib/auth/: client.ts  configs.ts  http.ts  types.ts  utils.ts
chat-app/lib/auth/grants/: authorization-code.ts  client-credentials.ts  (+1 more)
mock-bank-backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  server.js
mock-bank-backend/.choreo/: component.yaml
mock-bank-backend/data/: accounts.js  index.js  payees.js  products.js  user.js  utils.js
(+2 files in other folders)
