[project]
name = "banking-mcp-server"
version = "0.1.1"
description = "Banking MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.13.1",
    "requests>=2.32.5",
    "pydantic>=2.0",
    "reportlab>=4.0.0",
    "starlette>=0.35.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
banking-mcp-server = "banking_mcp_server.__main__:main"
